@@ -3,7 +3,6 @@ package seedu.address.model;
 import static java.util.Objects.requireNonNull;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 
 import javafx.beans.property.SimpleObjectProperty;
@@ -14,9 +13,11 @@ import seedu.address.commons.core.GuiSettings;
  * Represents User's preferences.
  */
 public class UserPrefs implements ReadOnlyUserPrefs {
-    public static final Path DEFAULT_ADDRESSBOOK_FILE = Paths.get("data", "addressbook.json");
+    public static final Path DEFAULT_ADDRESSBOOK_DIRECTORY = Path.of("data");
+    public static final Path DEFAULT_ADDRESSBOOK_FILE = DEFAULT_ADDRESSBOOK_DIRECTORY.resolve("addressbook.json");
 
     private GuiSettings guiSettings = new GuiSettings();
+    private Path addressBookDirectory = DEFAULT_ADDRESSBOOK_DIRECTORY;
     private final SimpleObjectProperty<Path> addressBookFilePath =
             new SimpleObjectProperty<>(DEFAULT_ADDRESSBOOK_FILE);
 
@@ -40,6 +41,7 @@ public class UserPrefs implements ReadOnlyUserPrefs {
         requireNonNull(newUserPrefs);
         setGuiSettings(newUserPrefs.getGuiSettings());
         setAddressBookFilePath(newUserPrefs.getAddressBookFilePath());
+        setAddressBookDirectory(newUserPrefs.getAddressBookDirectory());
     }
 
     public GuiSettings getGuiSettings() {
@@ -62,6 +64,15 @@ public class UserPrefs implements ReadOnlyUserPrefs {
     public void setAddressBookFilePath(Path addressBookFilePath) {
         requireNonNull(addressBookFilePath);
         this.addressBookFilePath.set(addressBookFilePath);
+    }
+
+    public Path getAddressBookDirectory() {
+        return addressBookDirectory;
+    }
+
+    public void setAddressBookDirectory(Path addressBookDirectory) {
+        requireNonNull(addressBookDirectory);
+        this.addressBookDirectory = addressBookDirectory;
     }
 
     @Override
